--- a/Data Structures/LCA and Sparse table/LCA and Sparse Table.tex
+++ b/Data Structures/LCA and Sparse table/LCA and Sparse Table.tex
@@ -77,7 +77,7 @@
 \paragraph*{}
 Това значи, че добавянето на "излишни" върхове към тези, на които търсим $lca$ не променя отговора. Тост ако искаме да сметнем $lca$ на група върхове можем да си ползволим да сметнем $lca$ на група, която съдържа тези върхове, но по няколко пъти. Това ни дава възможност да пресмятаме $lca$ на интервал от върхове чрез sparse table. Повече по темата ще научите по-късно.
 	\item $lca(u, v) = lca(u, v')$, където $v'$ се получава, когато "качим" връх $v$ на нивото на връх $u$ (разбира се, приемаме, че $depth(u) \leq depth(v)$)
-	\item $depth(lca(u, v)) \leq depth(u)$ и $depth(lca(u, v)) \leq v$.
+	\item $depth(lca(u, v)) \leq depth(u)$ и $depth(lca(u, v)) \leq depth(v)$.
 \paragraph*{}
 Можете да се убедите с примери от Фигура 1:
 \begin{itemize}
