--- a/Data Structures/LCA and Sparse table/LCA and Sparse Table.tex
+++ b/Data Structures/LCA and Sparse table/LCA and Sparse Table.tex
@@ -262,13 +262,13 @@ depth & 0 & 1 & 2 & 1 & 2 & 3 & 2 & 3 & 2 & 1 & 0 & 1 & 2 & 3 & 2 & 1 & 0 \\
 \end{tabular}
 
 \paragraph*{}
-Оказва се, че ако искаме да намерим lca на два върха $u$ и $v$ трябва да намерим върха, който е с най-малка дълбочина и се намира между първите срещания на тези върхове. Първото срещане на връх $u$  e индексът, на който връх $u$ се среща за пръв път в ойлеровото обхождане. Можете да се убедите с примери. Грубо идеята е, че $lca$ е най-високият връх на пътя между два връха, а този интервал, който се получава че разглеждаме съдържа път, който може да не е прост, но е не се "изкачва" прекалено много. Откриването на този връх може да стане по много начини - с коренова декомпозиция, сегментно дърво и т.н., но ние ще се спрем на имплементацията със sprase table, понеже най-често тази комбинация се оказва полезна.
+Оказва се, че ако искаме да намерим lca на два върха $u$ и $v$ трябва да намерим върха, който е с най-малка дълбочина и се намира между първите срещания на тези върхове. Първото срещане на връх $u$  e индексът, на който връх $u$ се среща за пръв път в ойлеровото обхождане. Можете да се убедите с примери. Грубо идеята е, че $lca$ е най-високият връх на пътя между два връха, а този интервал, който се получава че разглеждаме съдържа път, който може да не е прост, но е не се "изкачва"  прекалено много. Откриването на този връх може да стане по много начини - с коренова декомпозиция, сегментно дърво и т.н., но ние ще се спрем на имплементацията със sprase table, понеже най-често тази комбинация се оказва полезна.
 
 \section*{Sparse table}
 \paragraph*{}
 \href{https://cp-algorithms.com/data_structures/sparse-table.html}{Tutorial от cp-algorithms}
 \paragraph*{}
-Подобно на кореновата декомпозиция и сегментните дървета, sprase table-а също пази определена информация от търсения вид за разни интервали от нашия масив. По-конкретно, нека приемем, че ще търсим минимум в интервал. Нека имаме масив $a[]$ с размер $n$. Тогава sparse table-a $sparse[j][i]$ ще пази минимума за интервала $[i, i+2^j-1]$. Разбира се няма нужда да използваме стойности за $j$ по-големи от $log_2(n)$. Също така, ако се окаже, че $i+2^j-1 \geq n$ (тоест излиза от масива), тогава $sparse[j][i]$ ще пази минимум само за елементите до края на масива (един вид си представяме, че след края има безброй неутрални елементи спрямо операцията, която извършваме, в случая на $min$ този елемент е $+\infty$). Забелязваме също, че можем лесно да пресмятаме стойностите на $sparse[i][j]$. В общия случай, когато не излизаме от масива $sparse[j][i] = min(sparse[j-1][i], sparse[j-1][i+2^{j-1}])$. Така можем да пресметнем всички нужни ни стойности. Ето една примерна имплементация. 
+Подобно на кореновата декомпозиция и сегментните дървета, sprase table-а също пази определена информация от търсения вид за разни интервали от нашия масив. По-конкретно, нека приемем, че ще търсим минимум в интервал. Нека имаме масив $a[]$ с размер $n$. Тогава sparse table-a $sparse[j][i]$ ще пази минимума за интервала $[i, i+2^j-1]$. Разбира се няма нужда да използваме стойности за $j$ по-големи от $log_2(n)$. Също така, ако се окаже, че $i+2^j-1 \geq n$ (тоест излиза от масива), тогава $sparse[j][i]$ ще пази минимум само за елементите до края на масива (един вид си представяме, че след края има безброй неутрални елементи спрямо операцията, която извършваме, в случая на $min$ този елемент е $+\infty$). Забелязваме също, че можем лесно да пресмятаме стойностите на $sparse[j][i]$. В общия случай, когато не излизаме от масива $sparse[j][i] = min(sparse[j-1][i], sparse[j-1][i+2^{j-1}])$. Така можем да пресметнем всички нужни ни стойности. Ето една примерна имплементация. 
 \begin{lstlisting}
 for(int i = 0;i<n;i++) sparse[0][i] = a[i];
 for(int l = 1;l<=MAXLog;l++)
